src/test/deca/codegen/invalid/created/MissingReturn.deca
// Description:
//  Methode int sans return
// Resultats:
//
class A{
    int a(){
    }
}
{
    A newA = new A();
    newA.a();
}